# SaikoEngine

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  functions.cmake
.github/workflows/: cmake.yml
src/: CMakeLists.txt  TexturedTriangleShader.frag  TexturedTriangleShader.h  main.cpp  main.hpp  scene.mtl  scene2.glb
src/core/: CMakeLists.txt  logging.hpp  test_module.hpp  utility.hpp
src/core/tst/: CMakeLists.txt  test.cpp
src/dbg/: CMakeLists.txt  imgui_log_sink.cpp  log_window.cpp  log_window.hpp  root_debug_menu.cpp  root_debug_menu.hpp
src/dbg/widgets/: filter.cpp
src/debug/: CMakeLists.txt  imgui_log_sink.hpp  log.cpp  log.hpp  log_window.hpp  menu.cpp  menu.hpp  root_debug_menu.cpp  root_debug_menu.hpp
src/debug/widgets/: filter.cpp  filter.hpp
src/tools/: build.py
